// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> as anchor 1`] = `
.c3 {
  height: 18px;
  fill: #A2A4AD;
}

.c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #8C64CB;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 38px;
  height: 38px;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  padding: 0;
  cursor: pointer;
  background-color: white;
  box-shadow: 0 2px 30px 0 rgba(36,37,41,0.15);
}

<a
  className="c0 c1"
  element="a"
  target="_blank"
  variant="standard"
  weight="bold"
>
  <div
    className="c2"
  >
    <svg
      className="c3"
      color="grey"
      viewBox="0 0 18 18"
    >
      <path
        d="M16 14.7l-5.6-5.6L16 3.5l-1.4-1.4L9 7.7 3.4 2.1 2 3.5l5.6 5.6L2 14.7l1.4 1.4L9 10.5l5.6 5.6z"
      />
    </svg>
  </div>
</a>
`;

exports[`<CloseButton /> as button 1`] = `
.c3 {
  height: 18px;
  fill: #A2A4AD;
}

.c1 {
  border: none;
  outline: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 38px;
  height: 38px;
}

.c0 {
  display: inline-block;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 50%;
  padding: 0;
  cursor: pointer;
  background-color: white;
  box-shadow: 0 2px 30px 0 rgba(36,37,41,0.15);
}

<button
  aria-disabled={undefined}
  className="c0 c1"
  disabled={undefined}
  size="regular"
>
  <div
    className="c2"
  >
    <svg
      className="c3"
      color="grey"
      viewBox="0 0 18 18"
    >
      <path
        d="M16 14.7l-5.6-5.6L16 3.5l-1.4-1.4L9 7.7 3.4 2.1 2 3.5l5.6 5.6L2 14.7l1.4 1.4L9 10.5l5.6 5.6z"
      />
    </svg>
  </div>
</button>
`;
